ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
/* ... */
.workspaceTreeBinderImg
{
	padding-right: 2px;
}
.workspaceTreeBinderSelected
{
	color: #5691a6;
	padding-left: 2px;
}
.workspaceTreeControl
{
	background-color: #EAEBE8;
	padding: 0 0 8px;
	width: 230px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	overflow: auto;
}
.workspaceTreeControlBody
{
	padding-top: 5px;
}
.workspaceTreeControlHeader .workspaceTreeBinderSelected
{
	color: #fff;
}
.workspaceTreeControlHeader td
{
	vertical-align: top;
}
.workspaceTreeControlHeader_as
{
	background: #949494 url(images/blends/gray_blend3_75.png) repeat-x scroll center bottom;
	cursor: default;
	height: 64px;
}
.workspaceTreeControlHeader_as td div
{
	font-size: 18px;
	font-weight: normal;
	padding-left: 8px;
	margin-top: 5px;
}
.workspaceTreeControlHeader_base
{
	background-position:bottom;
	color: #fff;
	font-size: 0.85em;
	font-weight: bold;
	letter-spacing: 0.02em;
	padding: 5px;
	-moz-border-radius-topleft: 5px;
	-moz-border-radius-topright: 5px;
	-webkit-border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
}
.workspaceTreeControlHeader_closeA
{
	cursor: pointer;
}
.workspaceTreeControlHeader_closeButton
{
	-moz-border-radius: 15px;
	-webkit-border-radius: 15px;
	background: url(images/slice_blend_teal_27.png) repeat-x scroll 0 0 #81B2Bd;
	border: 1px solid #60919C;
	color: #FFFFFF;
	display: inline-block;
	font-size: 12px !important;
	margin: 5px;
	padding: 2px 12px !important;
}
.workspaceTreeControlHeader_closeButton:hover
{
	border: 1px solid #D9EAF0;
}
.workspaceTreeControlHeader_nav
{
	background: #85BCC3 url(images/header_blend_grey_bg.png) repeat-x scroll center bottom;
	cursor: pointer;
}
.workspaceTreeControlRow
{
	padding: 2px;
	margin-bottom: 1px;
}
.workspaceTreeControlRow:hover a
{
	color: #135c8f;
}
.workspaceTreeControlRowHover
{
	color: #5691a6;
	background: #cce9ee;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}
.workspaceTreeControlRowSelected
{
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	background: #fff;
	font-weight: bold;
}


/* */
.fontSize75em
{
	font-size: .8em;
}

/* From Lynn's styles. */
.head4
{
	color: black;
	font-size: 0.85em;
	font-weight: bold;
	margin-bottom: 0.2em;
	margin-top: 0.5em;
}

/* From Lynn's styles. */
.instructions
{
	color: #4D6D8B;
	font-size: 0.8em;
}

/* Styles for the canvas widget used in the landing page editor. */
.lpeCanvas
{
	background-color: #FFFFFF;
	border: 1px solid #999999;
	
	/* IE6 does not support the min-height attribute.  We have to add the 2 height lines as a workaround. */
	min-height: 500px;
	height: auto !important;
	height: 500px;
	
	margin-left: 5px;
	padding: 15px;
	position: relative;
	width: 850px;
}

/* Styles for the panel that holds the main canvas in the landing page editor. */
.lpeCanvasWrapperPanel
{
	position: relative;
}

/* Styles used with the actions control found on the main canvas in the landing page editor. */
.lpeCanvasActionsControl
{
	background-color: #EBECA5;
	border: 1px solid #CCCCCC;
	padding: 1px;
	position: absolute;
	right: 0px;
	top: -16px;
	white-space: nowrap;
}


/* Styles for the canvas widget when the user is dragging something over the canvas. */
.lpeCanvas-highlighted
{
	background-color: #CDF3FF;
}

/* Styles used for the jsp name in a "custom jsp" widget */
.lpeCustomJspName, .lpeEnhancedViewName
{
	cursor: default;
	color: #333333;
	font-family: Arial,sans-serif;
	font-size: 12px;
}

/* Styles for the drag proxy widget that is used when the user drags an item from the palette in the landing page editor. */
.lpeDragProxy
{
	background: #EFEEEC url(images/putty_blend3.png) repeat-x scroll 0 0;
	height: 20px;
	margin: 3px;
	padding: 3px;
	vertical-align: middle;
	white-space: nowrap;
	z-index: 130;
}

/* Styles for the drag proxy popup widget that is used when the user drags an item from the palette in the landing page editor. */
.lpeDragProxyPopup
{
	border: 0px;
	padding: 0px;
}

/* Styles used for the drop indicator that shows the user where a dropped widget will be inserted. */
.lpeDropIndicator
{
	background-color: #09F;
	height: 3px;
	position: absolute;
	width: 100px;
	z-index: 100;
}

/* Styles for widgets that can be dropped on a drop zone. */
.lpeDropWidget
{
	margin-bottom: .5em;
	margin-left: .5em;
	margin-right: .5em;
}

/* Styles used for the binder name in a "entry" widget */
.lpeEntryBinderName
{
	cursor: default;
	color: #333333;
	font-family: Arial,sans-serif;
	font-size: 12px;
}

/* Styles used for the entry name in the "entry" widget */
.lpeEntryName
{
	font-family: Arial,sans-serif;
	font-size: 11px;
	font-style: italic;
}

.noEntrySelected, .noFolderSelected
{
	color: graytext;
}

/* Styles used for the entry name in the "entry" widget when the mouse is not over the name*/
.lpeEntryName-mouseOut
{
	cursor: default;
	color: #333333;
}

/* Styles used for the entry name in the "entry" widget when the mouse is over the name*/
.lpeEntryName-mouseOver
{
	cursor: pointer;
	color: #135c8f;
}

/* Styles used for the binder name in a "folder" widget */
.lpeFolderBinderName
{
	cursor: default;
	color: #333333;
	font-family: Arial,sans-serif;
	font-size: 12px;
}

/* Styles used for the folder  name in the "folder" widget */
.lpeFolderName
{
	font-family: Arial,sans-serif;
	font-size: 11px;
	font-style: italic;
}

/* Styles used for the folder  name in the "folder" widget when the mouse is not over the name. */
.lpeFolderName-mouseOut
{
	cursor: default;
	color: #333333;
}

/* Styles used for the folder name in the "folder" widget when the mouse is over the name */
.lpeFolderName-mouseOver
{
	cursor: pointer;
	color: #135c8f;
}

/* Styles used for the graphic name in a "graphic" widget */
.lpeGraphicName
{
	cursor: default;
	color: #333333;
	font-family: Arial,sans-serif;
	font-size: 12px;
}
/* ... */

